Compiler/tests/typing/bad/testfile-borrow_mut-8.rs

fn foo(x: &mut i32) { }
fn main() { let mut x = 42; foo(& x); }
